Binding XAML for actu, DateFormat, Uri Format

--- a/HOFCWindows/HOFCWindows.csproj
+++ b/HOFCWindows/HOFCWindows.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Constants\ServerConstants.cs" />
+    <Compile Include="Converters\StringConverter.cs" />
     <Compile Include="Data\DataDownloader.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -111,6 +112,7 @@
     <Compile Include="Models\Classement.cs" />
     <Compile Include="Models\IModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Converters\UriConverter.cs" />
     <Compile Include="Views\Accueil.xaml.cs">
       <DependentUpon>Accueil.xaml</DependentUpon>
     </Compile>
